[gd_scene load_steps=19 format=2]

[ext_resource path="res://NPC.gd" type="Script" id=1]
[ext_resource path="res://src/npc/graphics/john/frame0000.webp" type="Texture" id=2]
[ext_resource path="res://src/mob_stagger.gd" type="Script" id=3]
[ext_resource path="res://mob_jump.gd" type="Script" id=4]
[ext_resource path="res://src/npc/graphics/john/frame0003.webp" type="Texture" id=5]
[ext_resource path="res://src/npc/graphics/john/frame0001.webp" type="Texture" id=6]
[ext_resource path="res://src/npc/graphics/john/frame0002.webp" type="Texture" id=7]
[ext_resource path="res://mob_idle.gd" type="Script" id=10]
[ext_resource path="res://mob_move.gd" type="Script" id=11]
[ext_resource path="res://mob_fall.gd" type="Script" id=12]
[ext_resource path="res://mob_death.gd" type="Script" id=13]
[ext_resource path="res://src/player/player_movement_state_machine.gd" type="Script" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 51, 111.25 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ) ],
"loop": true,
"name": "blink",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 57, 112.5 )

[sub_resource type="Animation" id=4]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "spawn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "stagger"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="NPC" type="KinematicBody2D"]
scale = Vector2( 0.4, 0.4 )
collision_layer = 32
collision_mask = 4
input_pickable = true
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -111.25 )
scale = Vector2( 1, 1 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2.5, -107.5 )
frames = SubResource( 7 )
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="movement_state" type="Node" parent="."]
script = ExtResource( 16 )

[node name="idle" type="Node" parent="movement_state"]
script = ExtResource( 10 )

[node name="stagger" type="Node" parent="movement_state"]
script = ExtResource( 3 )

[node name="stagger_timer" type="Timer" parent="movement_state/stagger"]
wait_time = 0.4
one_shot = true

[node name="move" type="Node" parent="movement_state"]
script = ExtResource( 11 )

[node name="fall" type="Node" parent="movement_state"]
script = ExtResource( 12 )

[node name="death" type="Node" parent="movement_state"]
script = ExtResource( 13 )

[node name="jump" type="Node" parent="movement_state"]
script = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -95.0
margin_top = 47.5
margin_right = -33.0
margin_bottom = 79.5
rect_scale = Vector2( 3, 3 )
size_flags_horizontal = 3
size_flags_vertical = 5
text = "test"
align = 1
valign = 1

[node name="hitbox" type="Area2D" parent="."]
z_index = 7
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0.811765, 0.811765, 1 )
position = Vector2( 0, -112.5 )
scale = Vector2( 1, 1 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "spawn"
anims/death = SubResource( 4 )
anims/spawn = SubResource( 5 )
anims/stagger = SubResource( 6 )

[node name="spell_state" type="Node" parent="."]

[connection signal="input_event" from="." to="." method="_on_NPC_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_NPC_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_NPC_mouse_exited"]
[connection signal="timeout" from="movement_state/stagger/stagger_timer" to="movement_state/stagger" method="_on_stagger_timer_timeout"]
[connection signal="body_shape_entered" from="hitbox" to="." method="_on_hitbox_body_shape_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
